# osupp

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigureFiles.cmake  Doxyfile  Enum.hpp  Game.cpp  Game.hpp  MapInfo.cpp  MapInfo.hpp  NotOSUObjectSprite.cpp  NotOSUObjectSprite.hpp  ObjectSprite.cpp  ObjectSprite.hpp  README.md  Skin.cpp  Skin.hpp  StateInGame.cpp  StateInGame.hpp  StateInit.cpp  StateInit.hpp  StateMainMenu.cpp  StateMainMenu.hpp  cmake-variants.json  config.hpp  define.hpp
assets/: default_settings.sdf  english.ldf  line.shader  notosu.gdf  settings.sdf  sprite.shader  static_shape.shader  text.shader
assets/locale/: defo_norwegian.ldf  english.ldf
bases/: BaseGameMode.cpp  BaseGameMode.hpp  BaseHitObject.cpp  BaseHitObject.hpp  BaseObjectTemplate.cpp  BaseObjectTemplate.hpp
game/: Enum.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameTask.cpp  GameTask.hpp  InputMapper.hpp  MapInfo.cpp  MapInfo.hpp  MapManager.cpp  MapManager.hpp  ObjectSprite.cpp  ObjectSprite.hpp  Skin.cpp  Skin.hpp  SliderTrail.cpp  SliderTrail.hpp
game/compat/: Import.cpp  Import.hpp
game/loaders/: MAPLoader.cpp  OSULoader.cpp
game/mappers/: AutoPilot.cpp  AutoPilot.hpp  HumanInput.cpp  HumanInput.hpp  TestInput.cpp  TestInput.hpp
game/objects/: BaseHitObject.cpp  BaseHitObject.hpp  BaseObjectTemplate.cpp  BaseObjectTemplate.hpp  HitObject.hpp  HitObjectArguments.hpp  HitObjects.hpp
game/states/: StateInGame.cpp  StateInGame.hpp  StateInit.cpp  StateInit.hpp  StateMainMenu.cpp  StateMainMenu.hpp  StateTest.cpp  StateTest.hpp
gamemodes/: CommonResourceLoaders.cpp  Standard.cpp  Standard.hpp  StandardResources.hpp
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
loaders/: MAPLoader.cpp  MapLoaders.hpp  MeshLoaders.hpp  OBJLoader.cpp  OSULoader.cpp
objects/: HitObject.tpp  HitObjects.h  HitObjects.hpp  Note.cpp  Note.h  Note.hpp  NoteTemplate.hpp  ObjectTemplates.h  ObjectTemplates.hpp  Slider.cpp  Slider.h  Slider.hpp  SliderTemplate.h  SliderTemplate.hpp  SliderTypes.hpp  SliderUtils.cpp  SliderUtils.hpp  Spinner.cpp  Spinner.h  Spinner.hpp  SpinnerTemplate.h  SpinnerTemplate.hpp
states/: StateInGame.cpp  StateInGame.hpp  StateInit.cpp  StateInit.hpp  StateMainMenu.cpp  StateMainMenu.hpp
system/: CallbackManager.hpp  Camera.cpp  Camera.hpp  Context.hpp  Drawable.hpp  IMGuiConfig.hpp  Image.cpp  Image.hpp  Keyboard.cpp  Keyboard.hpp  Locale.cpp  Locale.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Mouse.cpp  Mouse.hpp  Renderable.hpp  Renderer.cpp  Renderer.dpp  Renderer.hpp  Resource.hpp  ResourcePile.dpp  ResourcePile.hpp  ResourcePile.tpp  Resources.cpp  Resources.hpp  SUI.cpp  SUI.hpp  Setting.cpp  Setting.hpp  Settings.cpp  Settings.hpp  Shader.cpp  Shader.hpp  ShaderValue.hpp  Shaders.hpp  SharedValue.hpp  Sprite.cpp  Sprite.hpp  (+12 more)
system/SUI/: Button.cpp  Button.hpp  Image.cpp  Image.hpp
system/animators/: AnimateTexture.cpp  AnimateTexture.hpp  DisableAfter.cpp  DisableAfter.hpp  MoveLinear.cpp  MoveLinear.hpp
system/audio/: Audio.cpp  Audio.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioUtil.cpp  AudioUtil.hpp  Channel.cpp  Channel.hpp  Sound.cpp  Sound.hpp  SoundSample.cpp  SoundSample.hpp  SoundStream.cpp  SoundStream.hpp
system/core/: CallbackManager.hpp  Context.cpp  Context.hpp  EnumOperators.hpp  Error.cpp  Error.hpp  Errors.hpp  GameState.hpp  Log.cpp  Log.hpp  Main.cpp  Program.cpp  Program.hpp  Resource.hpp  Setting.cpp  Setting.hpp  State.cpp  State.hpp  StateHandler.cpp  StateHandler.hpp  Time.cpp  Time.hpp  Timing.cpp  Timing.hpp  ToFromString.cpp  ToFromString.hpp
system/debug/: DebugMenus.cpp  DebugMenus.hpp
system/drawables/: Drawables.cpp  Drawables.hpp  Primitives.hpp
system/gfx/: Camera.cpp  Camera.hpp  Drawable.hpp  Drawables.cpp  Drawables.hpp  GL.hpp  Generics.cpp  Generics.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  Primitives.hpp  Renderer.cpp  Renderer.dpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shaders.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
system/gui/: Gui.hpp  GuiCollections.cpp  GuiCollections.hpp  GuiElement.cpp  GuiElement.hpp  GuiIContainsElements.cpp  GuiIContainsElements.hpp  GuiIContainsModals.cpp  GuiIContainsModals.hpp  GuiModal.cpp  GuiModal.hpp  GuiPreDecls.hpp  GuiPrototype.cpp  GuiPrototype.hpp  GuiRegistry.cpp  GuiRegistry.hpp  GuiRoot.cpp  GuiRoot.hpp  GuiState.cpp  GuiState.hpp  GuiTask.cpp  GuiTask.hpp  GuiUtil.cpp  GuiUtil.hpp  GuiVariable.cpp  GuiVariable.hpp
system/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
system/input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
system/jobs/: BaseJob.hpp  BaseMessage.hpp  Job.hpp  Jobs.cpp  Jobs.hpp  Message.hpp  PersistentJob.hpp  Result.hpp
system/loaders/: OBJLoader.cpp
system/math/: Constants.hpp  Constraint.hpp  Curve.cpp  Curve.dpp  Curve.tpp  Exponential.hpp  Functions.hpp  Geometry.hpp  Interp.hpp  Math.hpp  MatrixMath.hpp  Random.hpp  Range.hpp  ScalarMath.hpp  Trigonometry.hpp  Vector2Math.hpp  Vector3Math.hpp  Vector4Math.hpp  VectorMath.hpp
system/state/: BaseState.cpp  BaseState.hpp  BaseStateHandler.cpp  BaseStateHandler.hpp  Context.cpp  Context.hpp  GameState.hpp  State.hpp
system/stb/: stb_image.h
system/tasks/: CountedTask.hpp  Holder.hpp  Message.hpp  NamedTask.hpp  PersistentTask.hpp  Response.hpp  Result.hpp  SimpleTask.hpp  Tasks.cpp  Tasks.hpp
system/types/: Circle.hpp  Color.hpp  (+19 more)
types/: Circle.hpp  Color.hpp  Cuboid.hpp  Cylinder.hpp  EnumOperators.hpp  Line.hpp  Line3.hpp  Matrix.hpp  Polygon.hpp  Rect.hpp  Size.hpp  Size3.hpp  Sphere.hpp  Traits.hpp  Triangle.hpp  Types.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
util/: Curve.cpp  Curve.dpp  Curve.hpp  Curve.tpp  Log.cpp  Math.cpp  Math.hpp  Random.hpp  Util.cpp  Util.hpp
(+92 files in other folders)
